// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configureShell configures all 1`] = `
Object {
  "config-mock-home/.bash_profile": "dummy",
  "config-mock-home/.bashrc": "dummy
export YVM_DIR=config-mock-home/.yvm
[ -r $YVM_DIR/yvm.sh ] && . $YVM_DIR/yvm.sh
",
  "config-mock-home/.config/fish/config.fish": "dummy
set -x YVM_DIR config-mock-home/.yvm
. $YVM_DIR/yvm.fish
",
  "config-mock-home/.zshrc": "dummy
export YVM_DIR=config-mock-home/.yvm
[ -r $YVM_DIR/yvm.sh ] && . $YVM_DIR/yvm.sh
",
}
`;

exports[`configureShell configures none 1`] = `
Object {
  "config-mock-home/.bash_profile": null,
  "config-mock-home/.bashrc": null,
  "config-mock-home/.config/fish/config.fish": null,
  "config-mock-home/.zshrc": null,
}
`;

exports[`configureShell configures none 2`] = `
Array [
  Array [
    "Unable to configure BASH at",
    "config-mock-home/.bashrc",
    "or",
    "config-mock-home/.bash_profile",
  ],
  Array [
    "Unable to configure FISH at",
    "config-mock-home/.config/fish/config.fish",
  ],
  Array [
    "Unable to configure ZSH at",
    "config-mock-home/.zshrc",
  ],
]
`;

exports[`configureShell configures only bash_profile when no bashrc 1`] = `
Object {
  "config-mock-home/.bash_profile": "dummy
export YVM_DIR=config-mock-install-dir/.yvm
[ -r $YVM_DIR/yvm.sh ] && . $YVM_DIR/yvm.sh
",
  "config-mock-home/.bashrc": null,
  "config-mock-home/.config/fish/config.fish": "dummy",
  "config-mock-home/.zshrc": "dummy",
}
`;

exports[`configureShell configures only bashrc 1`] = `
Object {
  "config-mock-home/.bash_profile": "dummy",
  "config-mock-home/.bashrc": "dummy
export YVM_DIR=config-mock-install-dir/.yvm
[ -r $YVM_DIR/yvm.sh ] && . $YVM_DIR/yvm.sh
",
  "config-mock-home/.config/fish/config.fish": "dummy",
  "config-mock-home/.zshrc": "dummy",
}
`;

exports[`configureShell configures only fish 1`] = `
Object {
  "config-mock-home/.bash_profile": "dummy",
  "config-mock-home/.bashrc": "dummy",
  "config-mock-home/.config/fish/config.fish": "dummy
set -x YVM_DIR config-mock-home/.yvm
. $YVM_DIR/yvm.fish
",
  "config-mock-home/.zshrc": "dummy",
}
`;

exports[`configureShell configures only zsh 1`] = `
Object {
  "config-mock-home/.bash_profile": "dummy",
  "config-mock-home/.bashrc": "dummy",
  "config-mock-home/.config/fish/config.fish": "dummy",
  "config-mock-home/.zshrc": "dummy
export YVM_DIR=config-mock-home/.yvm
[ -r $YVM_DIR/yvm.sh ] && . $YVM_DIR/yvm.sh
",
}
`;
